# colmap-metal

./: CMakeLists.txt  README.md  skills-lock.json
.github/workflows/: build-docker.yml  build-mac.yml  build-pycolmap.yml  build-ubuntu.yml  build-windows.yml
benchmark/: benchmark_sift_metal_test.py  metal_sparse_lund.md
cmake/: FindDependencies.cmake
doc/: features.rst  install.rst  tutorial.rst
scripts/: benchmark_sift_metal.py
src/colmap/controllers/: automatic_reconstruction.cc  automatic_reconstruction.h  automatic_reconstruction_test.cc  feature_extraction.cc  feature_matching.h  incremental_pipeline.cc  incremental_pipeline.h  incremental_pipeline_test.cc  option_manager.cc  pairing.cc  pairing.h  pairing_test.cc  undistorters.cc
src/colmap/estimators/: alignment_test.cc  bundle_adjustment_ceres.cc  bundle_adjustment_ceres_test.cc  generalized_pose_test.cc  two_view_geometry.h  two_view_geometry_test.cc
src/colmap/exe/: sfm.cc
src/colmap/feature/: CMakeLists.txt  extractor.cc  index.cc  index_test.cc  matcher.cc  sift.cc  sift_test.cc
src/colmap/image/: CMakeLists.txt  undistortion.cc  warp.cc  warp_metal.h  warp_metal.mm  warp_test.cc
src/colmap/image/shaders/: WarpImage.metal
src/colmap/retrieval/: visual_index.cc
src/colmap/scene/: database_test.cc
src/colmap/util/: threading.h  threading_test.cc
src/pycolmap/pipeline/: match_features.cc  match_features_test.py
src/pycolmap/sfm/: incremental_mapper.cc
